--- a/butter/Base.lproj/Main.storyboard
+++ b/butter/Base.lproj/Main.storyboard
@@ -49,45 +49,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dhz-Om-pmQ">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OZB-uK-Ba4">
-                                        <rect key="frame" x="281" y="18" width="31" height="30"/>
-                                        <state key="normal" title="New">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Org-er-0Vf">
-                                        <rect key="frame" x="8" y="18" width="49" height="30"/>
-                                        <state key="normal" title="Logout">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="onLogout:" destination="tyZ-Hs-UE5" eventType="touchUpInside" id="fx2-Vh-125"/>
-                                        </connections>
-                                    </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Twitter_logo_white_32" translatesAutoresizingMaskIntoConstraints="NO" id="hfv-Xk-Zng">
-                                        <rect key="frame" x="144" y="16" width="32" height="32"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="32" id="UjJ-Ex-dHN"/>
-                                            <constraint firstAttribute="width" constant="32" id="dOb-og-Wa0"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.53333333333333333" green="0.77254901960784317" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstItem="Org-er-0Vf" firstAttribute="leading" secondItem="dhz-Om-pmQ" secondAttribute="leading" constant="8" id="3Om-nl-PmU"/>
-                                    <constraint firstAttribute="centerX" secondItem="hfv-Xk-Zng" secondAttribute="centerX" id="4hF-gV-OOf"/>
-                                    <constraint firstAttribute="height" constant="55" id="9u2-1L-Ajo"/>
-                                    <constraint firstAttribute="trailing" secondItem="OZB-uK-Ba4" secondAttribute="trailing" constant="8" id="Aoq-7U-rD6"/>
-                                    <constraint firstItem="OZB-uK-Ba4" firstAttribute="top" secondItem="dhz-Om-pmQ" secondAttribute="top" constant="18" id="J4F-Hv-1ua"/>
-                                    <constraint firstItem="hfv-Xk-Zng" firstAttribute="top" secondItem="dhz-Om-pmQ" secondAttribute="top" constant="16" id="OOM-UU-oKZ"/>
-                                    <constraint firstItem="Org-er-0Vf" firstAttribute="top" secondItem="dhz-Om-pmQ" secondAttribute="top" constant="18" id="iHv-mO-uh2"/>
-                                </constraints>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="WRN-YR-J8w">
-                                <rect key="frame" x="0.0" y="55" width="320" height="513"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" restorationIdentifier="TweetCell" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="110" id="1OV-Io-Wgk" customClass="TweetCell" customModule="butter" customModuleProvider="target">
@@ -204,12 +167,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="dhz-Om-pmQ" firstAttribute="leading" secondItem="2KV-e8-k8y" secondAttribute="leading" id="0Ti-DM-GVg"/>
                             <constraint firstItem="WRN-YR-J8w" firstAttribute="leading" secondItem="2KV-e8-k8y" secondAttribute="leading" id="2Va-3b-5ER"/>
-                            <constraint firstAttribute="trailing" secondItem="dhz-Om-pmQ" secondAttribute="trailing" id="Kwm-J0-yqU"/>
-                            <constraint firstItem="WRN-YR-J8w" firstAttribute="top" secondItem="dhz-Om-pmQ" secondAttribute="bottom" id="TYn-lg-QGf"/>
+                            <constraint firstItem="WRN-YR-J8w" firstAttribute="top" secondItem="2KV-e8-k8y" secondAttribute="top" id="Uvb-6I-4Qn"/>
                             <constraint firstItem="JLe-Ve-Qrb" firstAttribute="top" secondItem="WRN-YR-J8w" secondAttribute="bottom" id="VoU-Z3-fa9"/>
-                            <constraint firstItem="dhz-Om-pmQ" firstAttribute="top" secondItem="2KV-e8-k8y" secondAttribute="top" id="Y1L-aM-aaK"/>
                             <constraint firstAttribute="trailing" secondItem="WRN-YR-J8w" secondAttribute="trailing" id="hNI-of-tdL"/>
                         </constraints>
                     </view>
@@ -452,7 +412,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Twitter_logo_white_32" width="32" height="32"/>
         <image name="favorite" width="16" height="16"/>
         <image name="reply" width="16" height="16"/>
         <image name="retweet" width="19" height="16"/>
